tests/ui/derives/derives-span-Debug-enum.stderr
error[E0277]: `Error` doesn't implement `Debug`
  --> $DIR/derives-span-Debug-enum.rs:9:6
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ `Error` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Error`
   = note: add `#[derive(Debug)]` to `Error` or manually `impl Debug for Error`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
