tests/ui/derives/derives-span-Debug-enum.rs
// This file was auto-generated using 'src/etc/generate-deriving-span-tests.py'


struct Error;

#[derive(Debug)]
enum Enum {
   A(
     Error //~ ERROR
     )
}

fn main() {}
